# telegram-notifications

./: Cargo.toml  Dockerfile  docker-compose.yaml  go.mod  main.go  send_notification.sh
src/: logging.rs  main.rs
