[package]
name = "telegram-hermes"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
actix-web = "4.9.0"
log4rs = "1.3.0"
dotenvy = "0.15.7"
